--- a/doc/paper_draft/supplementary.tex
+++ b/doc/paper_draft/supplementary.tex
@@ -43,7 +43,7 @@
 \usepackage{xcolor}
 %\definecolor{skyblue}{rgb}{0.2,0.6,0.9}
 %\newcommand{\placeholder}[1]{\textcolor{skyblue}{\rule{\linewidth}{#1}}}
-\newcommand{\TODO}[1]{\textcolor{red}{{[TODO: #1]}}}
+% \newcommand{\TODO}[1]{\textcolor{red}{{[TODO: #1]}}}
 %\newcommand\todolist[1]{\textcolor{red}{#1}}
 %\newcommand{\IGNORE}[1]{}
 %\newcommand{\new}[1]{\textcolor{orange}{#1}}
@@ -92,7 +92,7 @@
 
 
 %\section{Ablation Study}
-\section{Padding Size Ablation Study}
+\section{Padding Size}
 \label{sec:sup:ablations}
 
 The padding size is how much expand on the gnomonic projection coordinate system.
@@ -121,7 +121,7 @@ The SEPE plateaus at a padding of around 0.5, which optimally trades off angular
 	\centering
 	\includegraphics[width=0.80\textwidth]{images/paddingsize_vs_fov.pdf}
 	\caption{\label{fig:sup:paddingvsfov}%
-		The relationship between tangent image FoV and padding size. The red dots are tangent image horizontal FoV, the green squares are tangent image vertical FoV}
+		The relationship between tangent image FoV and padding size. The red and green curves are the tangent image horizontal and vertical FoV, respectively.}
 \end{figure*}
 
 \begin{figure*}[hbt!]
@@ -140,7 +140,7 @@ Here we show additional results for quantitative and qualitative evaluation.
 
 %In \cref{fig:sup:compflowcircle} and \cref{fig:sup:compflowline}, the SEPE heatmaps between the ground truth optical flow and our methods' estimates show smaller errors near the poles (top and bottom image edges).
 \cref{fig:sup:compflowcircle}, \cref{fig:sup:compflowline} and \cref{fig:sup:compflowrandom} show additional results and comparisons on the Replica 360° dataset, for circula, linear and random camera motions, respectively.
-The SEPE heatmaps between the ground truth optical flow and our methods erro heatmaps show consistently smaller errors near the poles (top and bottom image edges).
+The our method's SEPE heatmaps show consistently smaller errors near the poles (top and bottom image edges).
 
 \begin{figure*}[hbt!]
 	\centering
@@ -156,11 +156,11 @@ The SEPE heatmaps between the ground truth optical flow and our methods erro hea
 		\labeledfig{images/of_error/apartment_0_circ/apartment_0_circ_1k_0_omniflownet_0004_opticalflow_backward_pano.flo_flow_vis.jpg}{0.165}{(f) $OmniFlowNet$}{black}
 		\\[-1.0em]
 		\labeledfig{images/of_error/apartment_0_circ/apartment_0_circ_1k_0_gt_0004_opticalflow_backward_pano.flo_flow_vis.jpg}{0.165}{(g) GT}{black} &
-		\labeledfig{images/of_error/apartment_0_circ/apartment_0_circ_1k_0_dis_0004_opticalflow_backward_pano.flo_error_vis.jpg}{0.165}{(h) $DIS\_SEPE$}{black} &
-		\labeledfig{images/of_error/apartment_0_circ/apartment_0_circ_1k_0_our_0.4_0004_opticalflow_backward_pano.flo_error_vis.jpg}{0.165}{(i) $Our\_SEPE$}{black} &
-		\labeledfig{images/of_error/apartment_0_circ/apartment_0_circ_1k_0_pwcnet_0004_opticalflow_backward_pano.flo_error_vis.jpg}{0.165}{(j) $PWCNet\_SEPE$}{black} &
-		\labeledfig{images/of_error/apartment_0_circ/apartment_0_circ_1k_0_raft_0004_opticalflow_backward_pano.flo_error_vis.jpg}{0.165}{(k) $RAFT\_SEPE$}{black} &
-		\labeledfig{images/of_error/apartment_0_circ/apartment_0_circ_1k_0_omniflownet_0004_opticalflow_backward_pano.flo_error_vis.jpg}{0.165}{(l) $OmniFlowNet\_SEPE$}{black}
+		\labeledfig{images/of_error/apartment_0_circ/apartment_0_circ_1k_0_dis_0004_opticalflow_backward_pano.flo_error_vis.jpg}{0.165}{(h) $DIS\_SEPE$}{white} &
+		\labeledfig{images/of_error/apartment_0_circ/apartment_0_circ_1k_0_our_0.4_0004_opticalflow_backward_pano.flo_error_vis.jpg}{0.165}{(i) $Our\_SEPE$}{white} &
+		\labeledfig{images/of_error/apartment_0_circ/apartment_0_circ_1k_0_pwcnet_0004_opticalflow_backward_pano.flo_error_vis.jpg}{0.165}{(j) $PWCNet\_SEPE$}{white} &
+		\labeledfig{images/of_error/apartment_0_circ/apartment_0_circ_1k_0_raft_0004_opticalflow_backward_pano.flo_error_vis.jpg}{0.165}{(k) $RAFT\_SEPE$}{white} &
+		\labeledfig{images/of_error/apartment_0_circ/apartment_0_circ_1k_0_omniflownet_0004_opticalflow_backward_pano.flo_error_vis.jpg}{0.165}{(l) $OmniFlowNet\_SEPE$}{white}
 		% apartment_1_circ_1k_0
 		\\[-0.6em]
 		\multicolumn{5}{l}{\footnotesize{\emph{Circle}:\emph{apartment\_1}}}
@@ -182,7 +182,7 @@ The SEPE heatmaps between the ground truth optical flow and our methods erro hea
 		\\[-0.6em]
 		\multicolumn{5}{l}{\footnotesize{\emph{Circle}:\emph{frl\_apartment\_0}}}
 		\\[-0.6em]
-		\labeledfig{images/of_error/frl_apartment_0_circ/frl_apartment_0_circ_1k_0_0004_rgb_pano.jpg}{0.165}{(a) $I_t$}{white} &
+		\labeledfig{images/of_error/frl_apartment_0_circ/frl_apartment_0_circ_1k_0_0004_rgb_pano.jpg}{0.165}{(a) $I_t$}{black} &
 		\labeledfig{images/of_error/frl_apartment_0_circ/frl_apartment_0_circ_1k_0_dis_0004_opticalflow_backward_pano.flo_flow_vis.jpg}{0.165}{(b) $DIS$}{black} &
 		\labeledfig{images/of_error/frl_apartment_0_circ/frl_apartment_0_circ_1k_0_our_0.4_0004_opticalflow_backward_pano.flo_flow_vis.jpg}{0.165}{(c) $Our$}{black} &
 		\labeledfig{images/of_error/frl_apartment_0_circ/frl_apartment_0_circ_1k_0_pwcnet_0004_opticalflow_backward_pano.flo_flow_vis.jpg}{0.165}{(d) $PWCNet$}{black} &
@@ -233,7 +233,7 @@ The SEPE heatmaps between the ground truth optical flow and our methods erro hea
 		\\[-0.6em]
 		\multicolumn{5}{l}{\footnotesize{\emph{Circle}:\emph{room\_0}}}
 		\\[-0.6em]
-		\labeledfig{images/of_error/room_0_circ/room_0_circ_1k_0_0004_rgb_pano.jpg}{0.165}{(a) $I_t$}{white} &
+		\labeledfig{images/of_error/room_0_circ/room_0_circ_1k_0_0004_rgb_pano.jpg}{0.165}{(a) $I_t$}{black} &
 		\labeledfig{images/of_error/room_0_circ/room_0_circ_1k_0_dis_0004_opticalflow_backward_pano.flo_flow_vis.jpg}{0.165}{(b) $DIS$}{black} &
 		\labeledfig{images/of_error/room_0_circ/room_0_circ_1k_0_our_0.4_0004_opticalflow_backward_pano.flo_flow_vis.jpg}{0.165}{(c) $Our$}{black} &
 		\labeledfig{images/of_error/room_0_circ/room_0_circ_1k_0_pwcnet_0004_opticalflow_backward_pano.flo_flow_vis.jpg}{0.165}{(d) $PWCNet$}{black} &
@@ -245,12 +245,12 @@ The SEPE heatmaps between the ground truth optical flow and our methods erro hea
 		\labeledfig{images/of_error/room_0_circ/room_0_circ_1k_0_our_0.4_0004_opticalflow_backward_pano.flo_error_vis.jpg}{0.165}{(i) $Our\_SEPE$}{black} &
 		\labeledfig{images/of_error/room_0_circ/room_0_circ_1k_0_pwcnet_0004_opticalflow_backward_pano.flo_error_vis.jpg}{0.165}{(j) $PWCNet\_SEPE$}{black} &
 		\labeledfig{images/of_error/room_0_circ/room_0_circ_1k_0_raft_0004_opticalflow_backward_pano.flo_error_vis.jpg}{0.165}{(k) $RAFT\_SEPE$}{black} &
-		\labeledfig{images/of_error/room_0_circ/room_0_circ_1k_0_omniflownet_0004_opticalflow_backward_pano.flo_error_vis.jpg}{0.165}{(k) $OmniFlowNet\_SEPE$}{black}
+		\labeledfig{images/of_error/room_0_circ/room_0_circ_1k_0_omniflownet_0004_opticalflow_backward_pano.flo_error_vis.jpg}{0.165}{(l) $OmniFlowNet\_SEPE$}{black}
 		% room_1_circ_1k_0
 		\\[-0.6em]
 		\multicolumn{5}{l}{\footnotesize{\emph{Circle}:\emph{room\_1}}}
 		\\[-0.6em]
-		\labeledfig{images/of_error/room_1_circ/room_1_circ_1k_0_0004_rgb_pano.jpg}{0.165}{(a) $I_t$}{white} &
+		\labeledfig{images/of_error/room_1_circ/room_1_circ_1k_0_0004_rgb_pano.jpg}{0.165}{(a) $I_t$}{black} &
 		\labeledfig{images/of_error/room_1_circ/room_1_circ_1k_0_dis_0004_opticalflow_backward_pano.flo_flow_vis.jpg}{0.165}{(b) $DIS$}{black} &
 		\labeledfig{images/of_error/room_1_circ/room_1_circ_1k_0_our_0.4_0004_opticalflow_backward_pano.flo_flow_vis.jpg}{0.165}{(c) $Our$}{black} &
 		\labeledfig{images/of_error/room_1_circ/room_1_circ_1k_0_pwcnet_0004_opticalflow_backward_pano.flo_flow_vis.jpg}{0.165}{(d) $PWCNet$}{black} &
@@ -291,7 +291,7 @@ The SEPE heatmaps between the ground truth optical flow and our methods erro hea
 		\\[-0.6em]
 		\multicolumn{5}{l}{\footnotesize{\emph{Line}:\emph{apartment\_1}}}
 		\\[-0.5em]
-		\labeledfig{images/of_error/apartment_1_line/apartment_1_line_1k_0_0004_rgb_pano.jpg}{0.165}{(a) $I_t$}{white} &
+		\labeledfig{images/of_error/apartment_1_line/apartment_1_line_1k_0_0004_rgb_pano.jpg}{0.165}{(a) $I_t$}{black} &
 		\labeledfig{images/of_error/apartment_1_line/apartment_1_line_1k_0_dis_0004_opticalflow_backward_pano.flo_flow_vis.jpg}{0.165}{(b) $DIS$}{black} &
 		\labeledfig{images/of_error/apartment_1_line/apartment_1_line_1k_0_our_0.4_0004_opticalflow_backward_pano.flo_flow_vis.jpg}{0.165}{(c) $Our$}{black} &
 		\labeledfig{images/of_error/apartment_1_line/apartment_1_line_1k_0_pwcnet_0004_opticalflow_backward_pano.flo_flow_vis.jpg}{0.165}{(d) $PWCNet$}{black} &
@@ -371,7 +371,7 @@ The SEPE heatmaps between the ground truth optical flow and our methods erro hea
 		\\[-0.6em]
 		\multicolumn{5}{l}{\footnotesize{\emph{Line}:\emph{room\_1}}}
 		\\[-0.6em]
-		\labeledfig{images/of_error/room_1_line/room_1_line_1k_0_0004_rgb_pano.jpg}{0.165}{(a) $I_t$}{white} &
+		\labeledfig{images/of_error/room_1_line/room_1_line_1k_0_0004_rgb_pano.jpg}{0.165}{(a) $I_t$}{black} &
 		\labeledfig{images/of_error/room_1_line/room_1_line_1k_0_dis_0004_opticalflow_backward_pano.flo_flow_vis.jpg}{0.165}{(b) $DIS$}{black} &
 		\labeledfig{images/of_error/room_1_line/room_1_line_1k_0_our_0.4_0004_opticalflow_backward_pano.flo_flow_vis.jpg}{0.165}{(c) $Our$}{black} &
 		\labeledfig{images/of_error/room_1_line/room_1_line_1k_0_pwcnet_0004_opticalflow_backward_pano.flo_flow_vis.jpg}{0.165}{(d) $PWCNet$}{black} &
@@ -428,7 +428,7 @@ The SEPE heatmaps between the ground truth optical flow and our methods erro hea
 		\\[-0.6em]
 		\multicolumn{5}{l}{\footnotesize{\emph{Line}:\emph{frl\_apartment\_1}}}
 		\\[-0.6em]
-		\labeledfig{images/of_error/frl_apartment_0_rand/frl_apartment_0_rand_1k_0_0004_rgb_pano.jpg}{0.165}{(a) $I_t$}{white} &
+		\labeledfig{images/of_error/frl_apartment_0_rand/frl_apartment_0_rand_1k_0_0004_rgb_pano.jpg}{0.165}{(a) $I_t$}{black} &
 		\labeledfig{images/of_error/frl_apartment_0_rand/frl_apartment_0_rand_1k_0_dis_0004_opticalflow_backward_pano.flo_flow_vis.jpg}{0.165}{(b) $DIS$}{black} &
 		\labeledfig{images/of_error/frl_apartment_0_rand/frl_apartment_0_rand_1k_0_our_0.4_0004_opticalflow_backward_pano.flo_flow_vis.jpg}{0.165}{(c) $Our$}{black} &
 		\labeledfig{images/of_error/frl_apartment_0_rand/frl_apartment_0_rand_1k_0_pwcnet_0004_opticalflow_backward_pano.flo_flow_vis.jpg}{0.165}{(d) $PWCNet$}{black} &
@@ -517,7 +517,6 @@ In \cref{fig:sup:backwardwarp}, we show additional interpolation error heatmaps 
 %
 They visualize the interpolation error \cite{BakerSLRBS2011}, i.e. the RGB colour difference between the source image and backward-warped target image.
 
-
 \begin{figure*}[hbt!]
 	\centering
 	\begin{tabular}{@{}c*{6}{@{\hspace{-9pt}}c}@{}}
@@ -573,19 +572,19 @@ They visualize the interpolation error \cite{BakerSLRBS2011}, i.e. the RGB colou
 		%% OsakaTemple6
 		\multicolumn{5}{l}{\footnotesize{\emph{Temple3}}}
 		\\[-0.6em]
-		\labeledfig{images/of_warp/osakatemple6/OsakaTemple6_panoramic-0365.jpg}{0.165}{(a) $I_t$}{black} &
+		\labeledfig{images/of_warp/osakatemple6/OsakaTemple6_panoramic-0365.jpg}{0.165}{(a) $I_t$}{white} &
 		\labeledfig{images/of_warp/osakatemple6/OsakaTemple6_dis_0365_opticalflow_backward_pano.flo_flow_vis.jpg}{0.165}{(b) DIS}{black} &
 		\labeledfig{images/of_warp/osakatemple6/OsakaTemple6_our_weight_0365_opticalflow_backward_pano.flo_flow_vis.jpg}{0.165}{(c) Ours}{black} &
 		\labeledfig{images/of_warp/osakatemple6/OsakaTemple6_pwcnet_0365_opticalflow_backward_pano.flo_flow_vis.jpg}{0.165}{(d) PWC-Net}{black} &
 		\labeledfig{images/of_warp/osakatemple6/OsakaTemple6_raft_0365_opticalflow_backward_pano.flo_flow_vis.jpg}{0.165}{(e) RAFT}{black} &
 		\labeledfig{images/of_warp/osakatemple6/OsakaTemple6_omniflownet_0365_opticalflow_backward_pano.flo_flow_vis.jpg}{0.165}{(f) OmniFlowNet}{black}
 		\\[-1.0em]
-		\labeledfig{images/of_warp/osakatemple6/OsakaTemple6_panoramic-0366.jpg}{0.165}{(g) $I_{t+1}$}{black} &
-		\labeledfig{images/of_warp/osakatemple6/OsakaTemple6_dis_0365_opticalflow_backward_pano.flo_wrap.jpg}{0.165}{(h) DIS (Warp)}{black} &
-		\labeledfig{images/of_warp/osakatemple6/OsakaTemple6_our_weight_0365_opticalflow_backward_pano.flo_wrap.jpg}{0.165}{(i) Ours (Warp)}{black} &
-		\labeledfig{images/of_warp/osakatemple6/OsakaTemple6_pwcnet_0365_opticalflow_backward_pano.flo_wrap.jpg}{0.165}{(j) PWC-Net (Warp)}{black} &
-		\labeledfig{images/of_warp/osakatemple6/OsakaTemple6_raft_0365_opticalflow_backward_pano.flo_wrap.jpg}{0.165}{(k) RAFT (Warp)}{black} &
-		\labeledfig{images/of_warp/osakatemple6/OsakaTemple6_omniflownet_0365_opticalflow_backward_pano.flo_wrap.jpg}{0.165}{(l) OmniFlowNet (Warp)}{black}
+		\labeledfig{images/of_warp/osakatemple6/OsakaTemple6_panoramic-0366.jpg}{0.165}{(g) $I_{t+1}$}{white} &
+		\labeledfig{images/of_warp/osakatemple6/OsakaTemple6_dis_0365_opticalflow_backward_pano.flo_wrap.jpg}{0.165}{(h) DIS (Warp)}{white} &
+		\labeledfig{images/of_warp/osakatemple6/OsakaTemple6_our_weight_0365_opticalflow_backward_pano.flo_wrap.jpg}{0.165}{(i) Ours (Warp)}{white} &
+		\labeledfig{images/of_warp/osakatemple6/OsakaTemple6_pwcnet_0365_opticalflow_backward_pano.flo_wrap.jpg}{0.165}{(j) PWC-Net (Warp)}{white} &
+		\labeledfig{images/of_warp/osakatemple6/OsakaTemple6_raft_0365_opticalflow_backward_pano.flo_wrap.jpg}{0.165}{(k) RAFT (Warp)}{white} &
+		\labeledfig{images/of_warp/osakatemple6/OsakaTemple6_omniflownet_0365_opticalflow_backward_pano.flo_wrap.jpg}{0.165}{(l) OmniFlowNet (Warp)}{white}
 		\\[-1.0em]
 		&
 		\labeledfig{images/of_warp/osakatemple6/OsakaTemple6_dis_0365_opticalflow_backward_pano.flo_warp_error_vis.jpg}{0.165}{(m) DIS (Warp)}{black} &
