--- a/doc/paper_draft/sections/4-result.tex
+++ b/doc/paper_draft/sections/4-result.tex
@@ -312,6 +312,7 @@ Meanwhile, our global rotation warping pre-aligns the input images, so that our 
 \end{figure*}
 
 
+\noindent
 \Cref{fig:exp:compflow} shows some example estimated 360° optical flow fields and their SEPE visualised as heatmaps (lighter is better).
 %% analyse the diagram
 %The optical flow SEPE heatmap shown in the 2nd than 4th rows of \cref{fig:exp:compflow}, there are visualized in the same error range and larger error darker.
@@ -368,7 +369,7 @@ The differences between methods is less pronounced than in the Replica 360° dat
 		(a, g) Source and target images.
 		(b–f) Estimated flow fields.
 		(h–l) Target image (g) warped to the source image (a) using the estimated optical flow (b–f).
-		(m–q) Interpolation error heatmaps (lighter is better).}
+		(m–q) Interpolation error heatmaps (lighter is better).\looseness-1}
 \end{figure}
 
 
