Magic line for arXiv
See https://arxiv.org/help/submit_tex#pdflatex

--- a/doc/paper_draft/bmvc_review.tex
+++ b/doc/paper_draft/bmvc_review.tex
@@ -1,4 +1,5 @@
 \documentclass{bmvc2k}
+\pdfoutput=1
 
 %% Faster LaTeX compilation time, bigger file.
 %% TODO: Comment out for submission/final version.
