--- a/doc/paper_draft/supplementary.tex
+++ b/doc/paper_draft/supplementary.tex
@@ -1,4 +1,5 @@
 \documentclass{bmvc2k}
+\pdfoutput=1
 
 %% Faster LaTeX compilation time, bigger file.
 %% TODO: Comment out for submission/final version.
