--- a/doc/paper_draft_arXiv/sections/5-discussion.tex
+++ b/doc/paper_draft_arXiv/sections/5-discussion.tex
@@ -24,4 +24,6 @@ This helps in the case of moderate pose changes, but large pose changes remain c
 Our method struggles with large camera translations; one could replace the global rotation warping with a meshgrid-based warping method that can pre-align both rotational and translational camera motions.
 
 
-
+\section*{Acknowledgements}
+We thank the reviewers for their valuable feedback that has helped us improve our paper.
+This work was supported by an EPSRC-UKRI Innovation Fellowship (EP/S001050/1) and RCUK grant CAMERA (EP/M023281/1, EP/T022523/1).
