Rename main paper file for consistency

--- a/doc/paper_draft_arXiv/360flow.tex
+++ b/doc/paper_draft_arXiv/360flow.tex
@@ -2,8 +2,8 @@
 \pdfoutput=1
 
 
-\usepackage[utf8]{inputenc} %
-\usepackage[T1]{fontenc}    %
+\usepackage[utf8]{inputenc}
+\usepackage[T1]{fontenc}
 \usepackage{textcomp}
 \usepackage[toc,page]{appendix}
 
